force-app/main/default/objects/Recovery_Result__c/Recovery_Result__c.object-meta.xml
<CustomObject><label>Recovery Result</label><pluralLabel>Recovery Results</pluralLabel><nameField><label>Recovery Result Number</label><type>AutoNumber</type><displayFormat>RR-{00000}</displayFormat></nameField><deploymentStatus>Deployed</deploymentStatus><sharingModel>Private</sharingModel></CustomObject>