force-app/main/default/objects/Recovery_Result__c/fields/Flow_Error__c.field-meta.xml
<CustomField><fullName>Flow_Error__c</fullName><label>Flow Error</label><type>Lookup</type><referenceTo>Flow_Error__c</referenceTo><relationshipName>RecoveryResults</relationshipName><relationshipLabel>Recovery Results</relationshipLabel></CustomField>