force-app/main/default/objects/Recovery_Result__c/fields/Outcome__c.field-meta.xml
<CustomField><fullName>Outcome__c</fullName><label>Outcome</label><type>Picklist</type><valueSet><valueSetDefinition><value><fullName>Eligible</fullName><default>true</default><label>Eligible</label></value><value><fullName>Skipped</fullName><label>Skipped</label></value><value><fullName>Success</fullName><label>Success</label></value><value><fullName>Failed</fullName><label>Failed</label></value></valueSetDefinition></valueSet></CustomField>