force-app/main/default/objects/Recovery_Result__c/fields/Reason__c.field-meta.xml
<CustomField><fullName>Reason__c</fullName><label>Reason</label><type>LongTextArea</type><length>4000</length><visibleLines>5</visibleLines></CustomField>