force-app/main/default/objects/Recovery_Result__c/fields/Recovery_Job__c.field-meta.xml
<CustomField><fullName>Recovery_Job__c</fullName><label>Recovery Job</label><type>Lookup</type><relationshipLabel>Recovery Results</relationshipLabel><relationshipName>RecoveryResults</relationshipName><referenceTo>Recovery_Job__c</referenceTo></CustomField>